Multiclass SVM with all experiments combined

--- a/MotionSenese/model-selection.ipynb
+++ b/MotionSenese/model-selection.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 392,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,14 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 469,
    "metadata": {},
    "outputs": [],
    "source": [
     "root_path = os.path.join(os.getcwd(), 'motionsense-dataset')\n",
     "subjects_info_path = os.path.join(root_path, 'data_subjects_info.csv')\n",
-    "data_root_path = os.path.join(root_path, 'A_DeviceMotion_data')\n",
-    "num_participants = 24"
+    "\n",
+    "DATA_ROOT_PATH = os.path.join(root_path, 'A_DeviceMotion_data')\n",
+    "NUM_PARTICIPANTS = 24\n",
+    "EXPERIMENT_LABELS = {\n",
+    "    'sit': 0,\n",
+    "    'dws': 1,\n",
+    "    'jog': 2,\n",
+    "    'std': 3,\n",
+    "    'ups': 4,\n",
+    "    'wlk': 5\n",
+    "}"
    ]
   },
   {
@@ -49,47 +58,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 470,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dataframe_from_dir(num_participants, root_path, dir_path):\n",
+    "def get_experiment_label(dir_name):\n",
+    "    return EXPERIMENT_LABELS[dir_name[:3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 471,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dataframe_from_dir(dir_name):\n",
     "    '''\n",
     "    Receives a single experiment dirname\n",
     "    and returns a list of dataframes for each subject\n",
     "    of the specified experiment\n",
     "    '''\n",
     "    dfs = []\n",
-    "    for i in range(1, num_participants + 1):\n",
+    "    labels = []\n",
+    "    for i in range(1, NUM_PARTICIPANTS + 1):\n",
     "        file_name = 'sub_' + str(i) + '.csv'\n",
-    "        file_path = os.path.join(root_path, dir_path, file_name)\n",
+    "        file_path = os.path.join(DATA_ROOT_PATH, dir_name, file_name)\n",
     "        df = pd.read_csv(file_path)\n",
     "        dfs.append(df)\n",
-    "    return dfs"
+    "        labels.append(get_experiment_label(dir_name))\n",
+    "    return dfs, labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 472,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dataframes_from_files(num_participants, root_path, data_dirs):\n",
+    "def dataframes_from_files(data_dirs):\n",
     "    '''\n",
     "    Receives a list of directories\n",
     "    and returns a list of dataframes for each subject\n",
     "    and each experiment specified\n",
     "    '''\n",
     "    dfs = []\n",
-    "    for dir_path in data_dirs:\n",
-    "        dir_dfs = dataframe_from_dir(num_participants, root_path, dir_path)\n",
+    "    labels = []\n",
+    "    for dir_name in data_dirs:\n",
+    "        dir_dfs, dir_labels = dataframe_from_dir(dir_name)\n",
     "        dfs.extend(dir_dfs)\n",
-    "    return dfs       "
+    "        labels.extend(dir_labels)\n",
+    "    return dfs, labels"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 473,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,25 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_dirs = ['sit_5', 'sit_13', 'wlk_7', 'wlk_8']\n",
-    "test_dirs = ['wlk_15']\n",
-    "train_labels = 48 * [0]\n",
-    "train_labels.extend(48 * [1])\n",
-    "test_labels = 24 * [1]"
+    "test_dirs = ['wlk_15']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 475,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dfs = dataframes_from_files(num_participants, data_root_path, train_dirs)\n",
-    "test_dfs = dataframes_from_files(num_participants, data_root_path, test_dirs)\n",
+    "train_dfs, train_labels = dataframes_from_files(train_dirs)\n",
+    "test_dfs, test_labels = dataframes_from_files(test_dirs)\n",
     "dfs = train_dfs + test_dfs\n",
     "num_cols = min(df.shape[0] for df in dfs) # Cut to minimum experiment length\n",
     "features = dfs[0].columns.tolist()[1:]"
@@ -153,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 476,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +189,7 @@
     "    for sample in test_set:\n",
     "        predicted_labels.append(classifier.predict([sample])[0])\n",
     "    \n",
-    "    loss = sum(abs(prediction - label) for prediction, label in zip(predicted_labels, test_labels))\n",
+    "    loss = sum(prediction != label for prediction, label in zip(predicted_labels, test_labels))\n",
     "    loss /= len(test_labels)\n",
     "    \n",
     "    return predicted_labels, loss"
@@ -184,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
+   "execution_count": 477,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 383,
+   "execution_count": 478,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +240,7 @@
        " 'userAcceleration.z': 0.625}"
       ]
      },
-     "execution_count": 383,
+     "execution_count": 478,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,29 +265,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 384,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_experiment_label(dir_name, experiment_labels):\n",
-    "    return experiment_labels[dir_name[:3]]"
+    "all_dirs = [dir for dir in os.walk(DATA_ROOT_PATH)][0][1]\n",
+    "all_dfs, all_labels = dataframes_from_files(all_dirs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 385,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dirs = [dir for dir in os.walk(data_root_path)][0][1]\n",
-    "experiment_labels = {\n",
-    "    'sit': 0,\n",
-    "    'dws': 1,\n",
-    "    'jog': 2,\n",
-    "    'std': 3,\n",
-    "    'ups': 4,\n",
-    "    'wlk': 5\n",
-    "}"
+    "# Remove short experiments (< 900 timestamps)\n",
+    "short_indices = [i for i, df in enumerate(all_dfs) if df.shape[0] < 900]\n",
+    "for i in short_indices:\n",
+    "    del all_dfs[i]\n",
+    "    del all_labels[i]\n",
+    "\n",
+    "num_cols =  min(df.shape[0] for df in all_dfs) # Cut to minimum experiment length"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare data and test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 533,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_size = len(all_dfs)\n",
+    "test_size = round(0.2 * all_size)\n",
+    "test_indices = np.random.choice(all_size, test_size, replace=False)\n",
+    "test_dfs = []\n",
+    "test_labels = []\n",
+    "\n",
+    "for i in sorted(test_indices, reverse=True):\n",
+    "    test_dfs.append(all_dfs.pop(i))\n",
+    "    test_labels.append(all_labels.pop(i))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "setting an array element with a sequence.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-536-1879e78fcd76>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mtest_feature_df\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_set\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdataframes_to_feature_vectors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_dfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfeature\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_cols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mpredictions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrun_SVM\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mall_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m     \u001b[0mscores\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeature\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-476-031498d4d1b6>\u001b[0m in \u001b[0;36mrun_SVM\u001b[0;34m(train_set, train_labels, test_set, test_labels)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mclassifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msvm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0mclassifier\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_set\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_labels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mpredicted_labels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/sklearn/svm/base.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_sparse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msparse\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mcallable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkernel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    148\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 149\u001b[0;31m         \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_X_y\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'C'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    150\u001b[0m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_X_y\u001b[0;34m(X, y, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    571\u001b[0m     X = check_array(X, accept_sparse, dtype, order, copy, force_all_finite,\n\u001b[1;32m    572\u001b[0m                     \u001b[0mensure_2d\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_nd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mensure_min_samples\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 573\u001b[0;31m                     ensure_min_features, warn_on_dtype, estimator)\n\u001b[0m\u001b[1;32m    574\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmulti_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    575\u001b[0m         y = check_array(y, 'csr', force_all_finite=True, ensure_2d=False,\n",
+      "\u001b[0;32m/usr/local/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    431\u001b[0m                                       force_all_finite)\n\u001b[1;32m    432\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 433\u001b[0;31m         \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    434\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    435\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mensure_2d\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: setting an array element with a sequence."
+     ]
+    }
+   ],
+   "source": [
+    "all_scores = dict()\n",
+    "\n",
+    "for feature in features:\n",
+    "    train_feature_df, train_set = dataframes_to_feature_vectors(all_dfs, feature, num_cols)\n",
+    "    test_feature_df, test_set = dataframes_to_feature_vectors(test_dfs, feature, num_cols)\n",
+    "    \n",
+    "    predictions, loss = run_SVM(train_set, all_labels, test_set, test_labels)\n",
+    "    scores[feature] = 1 - loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 538,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_feature_df, train_set = dataframes_to_feature_vectors(all_dfs, feature, num_cols)\n",
+    "test_feature_df, test_set = dataframes_to_feature_vectors(test_dfs, feature, num_cols)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 539,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(278, 1333)"
+      ]
+     },
+     "execution_count": 539,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_feature_df.shape"
    ]
   },
   {
