adds logistic regression model

--- a/MotionSenese/Build history encoded sample.ipynb
+++ b/MotionSenese/Build history encoded sample.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
     "parts = range(1,24+1) # 24 participants\n",
     "\n",
     "# use history_length=10 just to be consistent with sliding window, can try encoding more/less history\n",
-    "hist_df = create_history_encoded_df(df, history_length=10, expirements=exps, participants=parts)"
+    "hist_df = create_history_encoded_df(df, history_length=5, expirements=exps, participants=parts)"
    ]
   },
   {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -112,14 +112,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1409265, 133)\n",
+      "(1411065, 73)\n",
       "(1412865, 15)\n",
-      "wlk    343568\n",
-      "sit    338298\n",
-      "std    305947\n",
-      "ups    156565\n",
-      "jog    133751\n",
-      "dws    131136\n",
+      "wlk    343928\n",
+      "sit    338538\n",
+      "std    306187\n",
+      "ups    156925\n",
+      "jog    133991\n",
+      "dws    131496\n",
       "Name: action, dtype: int64\n",
       "wlk    344288\n",
       "sit    338778\n",
@@ -147,28 +147,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "hist_df = hist_df.sample(frac=1).reset_index(drop=True) # shuffle the dataset\n",
-    "X, y = hist_df.drop([\"action\"], axis=1), hist_df[\"action\"]"
+    "# hist_df = hist_df.sample(frac=1).reset_index(drop=True) # shuffle the dataset\n",
+    "# X, y = hist_df.drop([\"action\"], axis=1), hist_df[\"action\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "num_training = int(hist_df.shape[0] * 0.8)\n",
-    "# use 80% for training and 20% for test. if parameters tunning is needed use cross-validation not the test data!\n",
-    "X_train, y_train = X[:num_training], y[:num_training]\n",
-    "X_test, y_test = X[num_training:], y[num_training:]"
+    "# num_training = int(hist_df.shape[0] * 0.8)\n",
+    "# # use 80% for training and 20% for test. if parameters tunning is needed use cross-validation not the test data!\n",
+    "# X_train, y_train = X[:num_training], y[:num_training]\n",
+    "# X_test, y_test = X[num_training:], y[num_training:]"
    ]
   },
   {
@@ -180,13 +180,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "hist_df.to_pickle(\"history_10_encoded.pkl\")"
+    "hist_df.to_pickle(\"history_5_encoded.pkl\")"
    ]
   }
  ],
