--- a/MotionSenese/notebooks/Models and Evaluation.ipynb
+++ b/MotionSenese/notebooks/Models and Evaluation.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,6 +518,24 @@
     "lr_prediction = lr.predict(X_vald)\n",
     "classes_names = create_classes(labels_dict)\n",
     "evaluate_results(y_vald, lr_prediction, classes_names)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVM Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "svm = SVC()\n",
+    "svm.fit(X_train, y_train)"
    ]
   },
   {
